--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <title>Page title</title>
+    <link rel="shortcut icon" href="./images/umbrella_2963359.png" type="image/x-icon">
+    <title>Weather App</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
