frame 3 weather app

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <!-- <include src="./partials/hero.html"></include> -->
-    <include src="./partials/fivedays.html"></include>
+  <!-- <include src="./partials/fivedays.html"></include> -->
+    <include src="./partials/weatherdetails.html"></include>
   </body>
 </html>
